--- a/frontend/src/pages/ProjectsPage/ProjectsPage.scss
+++ b/frontend/src/pages/ProjectsPage/ProjectsPage.scss
@@ -202,12 +202,20 @@
       flex-direction: column;
       align-items: center;
       gap: 1rem;
-
+      text-align: center;
+    
       .empty-icon {
         color: v.$text-secondary;
       }
-
+    
       p {
+        max-width: 500px; 
+        width: 100%; 
+        margin: 0 auto; 
+        text-wrap: wrap; 
+        word-break: break-word;
+        padding: 0 1rem;
+    
         strong {
           color: v.$text-primary;
           font-weight: 600;
